--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.13.2",
     "webpack-dev-server": "^3.11.2"
   }
 }
