--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
         "downvotes",
         "total",
         "type",
-        "upvotes"
+        "undo",
+        "upvotes",
+        "votedown",
+        "voteup"
     ]
 }
