--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.ignoreWords": [
+        "child",
         "commentable",
         "commentid",
         "downcase",
         "downvotes",
+        "nth",
+        "path",
         "total",
         "type",
         "undo",
