--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.ignoreWords": [
+        "array",
         "child",
         "commentable",
         "commentid",
+        "dislikers",
         "downcase",
         "downvotes",
         "nth",
+        "of",
         "path",
         "total",
         "type",
