--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "javascript-time-ago": "^2.3.8",
     "jquery": "^3.6.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-axios": "^2.0.5",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-share": "^4.4.0",
