--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-axios": "^2.0.5",
     "react-dom": "17.0.2",
+    "react-google-login": "^5.2.2",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-share": "^4.4.0",
