react google signin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,31 @@
 {
     "cSpell.ignoreWords": [
         "array",
+        "b",
         "child",
         "commentable",
         "commentid",
         "dislikers",
+        "dm",
         "downcase",
         "downvotes",
+        "e",
+        "hh",
+        "km",
+        "l",
         "nth",
         "of",
         "path",
+        "q",
+        "sn",
+        "szqa",
         "total",
         "type",
         "undo",
         "upvotes",
         "votedown",
-        "voteup"
+        "voteup",
+        "z",
+        "zhou"
     ]
 }
