--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "downcase",
         "downvotes",
         "e",
+        "gtoken",
         "hh",
         "km",
         "l",
@@ -18,6 +19,9 @@
         "of",
         "path",
         "q",
+        "rfsi",
+        "rgsi",
+        "signin",
         "sn",
         "szqa",
         "total",
