--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,13 +12,16 @@
         "downcase",
         "downvotes",
         "e",
+        "from",
         "gtoken",
         "hh",
         "km",
         "l",
+        "logo",
         "nth",
         "of",
         "path",
+        "pixles",
         "q",
         "recaptcha",
         "rfsi",
@@ -28,6 +31,8 @@
         "sn",
         "szqa",
         "thebullet",
+        "to",
+        "top",
         "total",
         "type",
         "undo",
