--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "babel-plugin-styled-components": "^1.13.2",
+    "prettier": "2.6.2",
     "webpack-dev-server": "^3.11.2"
   }
 }
