--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,46 +1,47 @@
 {
-    "cSpell.ignoreWords": [
-        "array",
-        "axios",
-        "b",
-        "base",
-        "child",
-        "commentable",
-        "commentid",
-        "dislikers",
-        "dm",
-        "downcase",
-        "downvotes",
-        "e",
-        "from",
-        "gtoken",
-        "hh",
-        "km",
-        "l",
-        "logo",
-        "nth",
-        "of",
-        "path",
-        "pixles",
-        "q",
-        "recaptcha",
-        "rfsi",
-        "rgsi",
-        "secret",
-        "signin",
-        "sn",
-        "szqa",
-        "thebullet",
-        "to",
-        "top",
-        "total",
-        "type",
-        "undo",
-        "upvotes",
-        "urlsafe",
-        "votedown",
-        "voteup",
-        "z",
-        "zhou"
-    ]
+	"cSpell.ignoreWords": [
+		"array",
+		"axios",
+		"b",
+		"base",
+		"child",
+		"commentable",
+		"commentid",
+		"dislikers",
+		"dm",
+		"downcase",
+		"downvotes",
+		"e",
+		"from",
+		"gtoken",
+		"hh",
+		"km",
+		"l",
+		"logo",
+		"nth",
+		"of",
+		"path",
+		"pixles",
+		"postgrid",
+		"q",
+		"recaptcha",
+		"rfsi",
+		"rgsi",
+		"secret",
+		"signin",
+		"sn",
+		"szqa",
+		"thebullet",
+		"to",
+		"top",
+		"total",
+		"type",
+		"undo",
+		"upvotes",
+		"urlsafe",
+		"votedown",
+		"voteup",
+		"z",
+		"zhou"
+	]
 }
