--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-google-places-autocomplete": "^3.3.2",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
+    "react-load-script": "^0.0.6",
     "react-router-dom": "^5.2.0",
     "react-share": "^4.4.0",
     "react-slugify": "^2.0.3",
