--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
     "@paypal/react-paypal-js": "^7.5.0",
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.0",
+    "@rails/actioncable": "^7.0.3-1",
+    "@rails/activestorage": "^7.0.3-1",
+    "@rails/ujs": "^7.0.3-1",
+    "@rails/webpacker": "5.4.3",
     "@tiptap/core": "^2.0.0-beta.182",
     "@tiptap/react": "^2.0.0-beta.114",
     "@tiptap/starter-kit": "^2.0.0-beta.191",
