--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-	"name": "floridablaze",
-	"private": true,
-	"dependencies": {
-		"@babel/preset-react": "^7.14.5",
-		"@paypal/react-paypal-js": "^7.5.0",
-		"@rails/actioncable": "^7.0.3-1",
-		"@rails/activestorage": "^7.0.3-1",
-		"@rails/ujs": "^7.0.3-1",
-		"@rails/webpacker": "5.4.3",
-		"@tiptap/core": "^2.0.0-beta.182",
-		"@tiptap/react": "^2.0.0-beta.114",
-		"@tiptap/starter-kit": "^2.0.0-beta.191",
-		"axios": "^0.21.1",
-		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-		"dotenv": "^10.0.0",
-		"gsap": "^3.7.1",
-		"javascript-time-ago": "^2.3.8",
-		"jquery": "^3.6.0",
-		"prop-types": "^15.7.2",
-		"react": "17.0.2",
-		"react-axios": "^2.0.5",
-		"react-dom": "17.0.2",
-		"react-facebook-login": "^4.1.1",
-		"react-google-autocomplete": "^2.7.0",
-		"react-google-login": "^5.2.2",
-		"react-google-places-autocomplete": "^3.3.4",
-		"react-google-recaptcha": "^2.1.0",
-		"react-icons": "^4.3.1",
-		"react-load-script": "^0.0.6",
-		"react-router-dom": "^5.2.0",
-		"react-share": "^4.4.0",
-		"react-slugify": "^2.0.3",
-		"react-spinkit": "^3.0.0",
-		"react-time-ago": "^7.1.1",
-		"styled-components": "^5.3.0",
-		"turbolinks": "^5.2.0",
-		"webpack": "^4.46.0",
-		"webpack-cli": "^3.3.12"
-	},
-	"version": "0.1.0",
-	"devDependencies": {
-		"babel-plugin-styled-components": "^1.13.2",
-		"prettier": "2.6.2",
-		"webpack-dev-server": "^3.11.2"
-	}
+  "name": "floridablaze",
+  "private": true,
+  "dependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@paypal/react-paypal-js": "^7.5.0",
+    "@rails/actioncable": "^7.0.3-1",
+    "@rails/activestorage": "^7.0.3-1",
+    "@rails/ujs": "^7.0.3-1",
+    "@rails/webpacker": "5.4.3",
+    "@tiptap/core": "^2.0.0-beta.182",
+    "@tiptap/react": "^2.0.0-beta.114",
+    "@tiptap/starter-kit": "^2.0.0-beta.191",
+    "axios": "^0.21.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "dotenv": "^10.0.0",
+    "gsap": "^3.7.1",
+    "javascript-time-ago": "^2.3.8",
+    "jquery": "^3.6.0",
+    "prop-types": "^15.7.2",
+    "react": "17.0.2",
+    "react-axios": "^2.0.5",
+    "react-dom": "17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-autocomplete": "^2.7.0",
+    "react-google-login": "^5.2.2",
+    "react-google-places-autocomplete": "^3.3.4",
+    "react-google-recaptcha": "^2.1.0",
+    "react-icons": "^4.3.1",
+    "react-load-script": "^0.0.6",
+    "react-router-dom": "^5.2.0",
+    "react-share": "^4.4.0",
+    "react-slugify": "^2.0.3",
+    "react-spinkit": "^3.0.0",
+    "react-time-ago": "^7.1.1",
+    "styled-components": "^5.3.0",
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "babel-plugin-styled-components": "^1.13.2",
+    "prettier": "2.6.2"
+  },
+  "version": "0.1.0",
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.2"
+  }
 }
