--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
     "@tiptap/react": "^2.0.0-beta.114",
     "@tiptap/starter-kit": "^2.0.0-beta.191",
     "axios": "^0.21.1",
-    "babel-plugin-styled-components": "^1.13.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "dotenv": "^10.0.0",
     "gsap": "^3.7.1",
     "javascript-time-ago": "^2.3.8",
     "jquery": "^3.6.0",
-    "prettier": "2.6.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-axios": "^2.0.5",
     "react-dom": "17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-google-autocomplete": "^2.7.0",
     "react-google-login": "^5.2.2",
     "react-google-places-autocomplete": "^3.3.4",
@@ -38,7 +37,8 @@
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "babel-plugin-styled-components": "^1.13.2",
+    "prettier": "2.6.2"
   },
   "version": "0.1.0",
   "devDependencies": {
