--- a/package.json
+++ b/package.json
@@ -1,47 +1,39 @@
 {
-  "name": "floridablaze",
-  "private": true,
-  "dependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@paypal/react-paypal-js": "^7.5.0",
-    "@rails/actioncable": "^7.0.3-1",
-    "@rails/activestorage": "^7.0.3-1",
-    "@rails/ujs": "^7.0.3-1",
-    "@rails/webpacker": "5.4.3",
-    "@tiptap/core": "^2.0.0-beta.182",
-    "@tiptap/react": "^2.0.0-beta.114",
-    "@tiptap/starter-kit": "^2.0.0-beta.191",
-    "axios": "^0.27.2",
-    "babel-plugin-styled-components": "^1.13.2",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "dotenv": "^10.0.0",
-    "gsap": "^3.7.1",
-    "javascript-time-ago": "^2.3.8",
-    "jquery": "^3.6.0",
-    "prettier": "2.6.2",
-    "prop-types": "^15.7.2",
-    "react": "18.2.0",
-    "react-axios": "^2.0.6",
-    "react-dom": "18.2.0",
-    "react-facebook-login": "^4.1.1",
-    "react-google-autocomplete": "^2.7.0",
-    "react-google-login": "^5.2.2",
-    "react-google-places-autocomplete": "^3.3.4",
-    "react-google-recaptcha": "^2.1.0",
-    "react-icons": "^4.3.1",
-    "react-load-script": "^0.0.6",
-    "react-router-dom": "^5.2.0",
-    "react-share": "^4.4.0",
-    "react-slugify": "^2.0.3",
-    "react-spinkit": "^3.0.0",
-    "react-time-ago": "^7.1.1",
-    "styled-components": "^5.3.0",
-    "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
-  },
-  "version": "0.1.0",
-  "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
-  }
+	"name": "app",
+	"private": true,
+	"dependencies": {
+		"@babel/core": "^7.20.7",
+		"@babel/plugin-transform-runtime": "^7.19.6",
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-react": "^7.18.6",
+		"@babel/runtime": "^7.20.7",
+		"babel-loader": "^8.2.4",
+		"babel-plugin-macros": "^3.1.0",
+		"babel-plugin-styled-components": "^2.0.7",
+		"compression-webpack-plugin": "^10.0.0",
+		"node-sass": "^8.0.0",
+		"pnp-webpack-plugin": "1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"sass-loader": "^13.2.0",
+		"shakapacker": "6.5.2",
+		"terser-webpack-plugin": "^5.3.6",
+		"webpack": "^5.75.0",
+		"webpack-assets-manifest": "^5.1.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-merge": "^5.8.0",
+		"webpack-sources": "^3.2.3"
+	},
+	"version": "0.1.0",
+	"babel": {
+		"presets": [
+			"./node_modules/shakapacker/package/babel/preset.js"
+		]
+	},
+	"browserslist": [
+		"defaults"
+	],
+	"devDependencies": {
+		"webpack-dev-server": "^4.11.1"
+	}
 }
