--- a/package.json
+++ b/package.json
@@ -7,16 +7,40 @@
 		"@babel/preset-env": "^7.20.2",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/runtime": "^7.20.7",
+		"@paypal/react-paypal-js": "^7.8.2",
+		"@rails/activestorage": "^7.0.4",
+		"@rails/ujs": "^7.0.4",
+		"@tiptap/react": "^2.0.0-beta.209",
+		"@tiptap/starter-kit": "^2.0.0-beta.209",
+		"axios": "^1.2.1",
 		"babel-loader": "^8.2.4",
 		"babel-plugin-macros": "^3.1.0",
 		"babel-plugin-styled-components": "^2.0.7",
+		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
 		"compression-webpack-plugin": "^10.0.0",
+		"css-loader": "^6.7.3",
+		"css-minimizer-webpack-plugin": "^4.2.2",
+		"gsap": "^3.11.4",
+		"jquery": "^3.6.3",
+		"mini-css-extract-plugin": "^2.7.2",
 		"node-sass": "^8.0.0",
 		"pnp-webpack-plugin": "1",
+		"prop-types": "^15.8.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-google-login": "^5.2.2",
+		"react-google-places-autocomplete": "^3.4.0",
+		"react-google-recaptcha": "^2.1.0",
+		"react-on-rails": "13.0.2",
+		"react-router-dom": "^6.6.1",
+		"react-share": "^4.4.1",
+		"react-slugify": "^2.1.0",
+		"react-time-ago": "^7.2.1",
+		"sass": "^1.57.1",
 		"sass-loader": "^13.2.0",
 		"shakapacker": "6.5.2",
+		"style-loader": "^3.3.1",
+		"styled-components": "^5.3.6",
 		"terser-webpack-plugin": "^5.3.6",
 		"webpack": "^5.75.0",
 		"webpack-assets-manifest": "^5.1.0",
@@ -34,6 +58,8 @@
 		"defaults"
 	],
 	"devDependencies": {
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+		"react-refresh": "^0.14.0",
 		"webpack-dev-server": "^4.11.1"
 	}
 }
