--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -8,7 +8,7 @@ default: &default
   cache_path: tmp/webpacker
   webpack_compile_output: true
 
-  # Additional paths webpack should look up modules
+  # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
   additional_paths: []
 
@@ -17,7 +17,8 @@ default: &default
 
 development:
   <<: *default
-  compile: true
+  # This is false since we're running `bin/webpacker -w` in Procfile.dev-setic
+  compile: false
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
@@ -25,9 +26,7 @@ development:
     host: localhost
     port: 3035
     # Hot Module Replacement updates modules while the application is running without a full reload
-    hmr: false
-    # Defaults to the inverse of hmr. Uncomment to manually set this.
-    # live_reload: true
+    hmr: true
     client:
       # Should we show a full-screen overlay in the browser when there are compiler errors or warnings?
       overlay: true
@@ -36,16 +35,15 @@ development:
       #  hostname: "0.0.0.0"
       #  pathname: "/ws"
       #  port: 8080
-    # Should we use gzip compression?
     compress: true
     # Note that apps that do not check the host are vulnerable to DNS rebinding attacks
-    allowed_hosts: "all"
+    allowed_hosts: [ 'localhost' ]
     pretty: true
     headers:
-      "Access-Control-Allow-Origin": "*"
+      'Access-Control-Allow-Origin': '*'
     static:
       watch:
-        ignored: "**/node_modules/**"
+        ignored: '**/node_modules/**'
 
 test:
   <<: *default
