--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-google-login": "^5.2.2",
 		"react-google-places-autocomplete": "^3.4.0",
 		"react-google-recaptcha": "^2.1.0",
+		"react-intersection-observer": "^9.4.1",
 		"react-on-rails": "13.0.2",
 		"react-router-dom": "^6.6.1",
 		"react-share": "^4.4.1",
