--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"css-loader": "^6.7.3",
 		"css-minimizer-webpack-plugin": "^4.2.2",
 		"gsap": "^3.11.4",
+		"javascript-time-ago": "^2.5.9",
 		"jquery": "^3.6.3",
 		"mini-css-extract-plugin": "^2.7.2",
 		"node-sass": "^8.0.0",
