--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.20.7",
     "@paypal/react-paypal-js": "^7.8.2",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@rails/activestorage": "^7.0.4",
     "@rails/ujs": "^7.0.4",
     "@tiptap/react": "^2.0.0-beta.193",
@@ -15,6 +16,7 @@
     "axios": "^1.2.1",
     "babel-loader": "^8.2.4",
     "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.3",
@@ -26,6 +28,7 @@
     "node-sass": "^8.0.0",
     "pnp-webpack-plugin": "1",
     "prop-types": "^15.8.1",
+    "prosemirror-keymap": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -33,6 +36,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-intersection-observer": "^9.4.1",
     "react-on-rails": "13.0.2",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.6.1",
     "react-share": "^4.4.1",
     "react-slugify": "^2.1.0",
@@ -46,12 +50,9 @@
     "webpack": "^5.75.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0",
-    "webpack-sources": "^3.2.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "babel-plugin-styled-components": "^2.0.7",
-    "react-refresh": "^0.14.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-sources": "^3.2.3"
   },
   "version": "0.1.0",
   "babel": {
@@ -61,6 +62,5 @@
   },
   "browserslist": [
     "defaults"
-  ],
-  "devDependencies": {}
+  ]
 }
