--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.8.1",
     "prosemirror-commands": "^1.5.0",
     "prosemirror-keymap": "^1.2.0",
+    "prosemirror-schema-list": "^1.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
