--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
     "terser-webpack-plugin": "^5.3.6",
+    "tiptap": "^1.32.2",
     "webpack": "^5.75.0",
     "webpack-assets-manifest": "^5.1.0",
     "webpack-cli": "^4.9.2",
