--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prosemirror-keymap": "^1.2.0",
     "prosemirror-schema-list": "^1.2.2",
     "react": "^17.0.2",
+    "react-carousel-dots": "^0.1.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-google-places-autocomplete": "^3.4.0",
