--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"cSpell.ignoreWords": [
+		"Foractive",
 		"array",
 		"axios",
 		"b",
@@ -41,6 +42,7 @@
 		"undo",
 		"upvotes",
 		"urlsafe",
+		"usecallback",
 		"votedown",
 		"voteup",
 		"z",
