--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.20.7",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/core": "7",
+    "@babel/plugin-transform-runtime": "7",
+    "@babel/preset-env": "7",
     "@babel/preset-react": "^7.18.6",
-    "@babel/runtime": "^7.20.7",
+    "@babel/runtime": "7",
     "@paypal/react-paypal-js": "^7.8.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@rails/activestorage": "^7.0.4",
@@ -14,11 +14,11 @@
     "@tiptap/react": "^2.0.0-beta.193",
     "@tiptap/starter-kit": "^2.0.0-beta.193",
     "axios": "^1.2.1",
-    "babel-loader": "^8.2.4",
+    "babel-loader": "8",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "compression-webpack-plugin": "^10.0.0",
+    "compression-webpack-plugin": "9",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "gsap": "^3.11.4",
@@ -52,13 +52,13 @@
     "shakapacker": "6.5.2",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
-    "terser-webpack-plugin": "^5.3.6",
+    "terser-webpack-plugin": "5",
     "tiptap": "^1.32.2",
-    "webpack": "^5.75.0",
-    "webpack-assets-manifest": "^5.1.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0",
+    "webpack": "5",
+    "webpack-assets-manifest": "5",
+    "webpack-cli": "4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "5",
     "webpack-sources": "^3.2.3"
   },
   "version": "0.1.0",
