--- a/config/database.yml
+++ b/config/database.yml
@@ -88,6 +88,7 @@ production:
   database: blogv3_production
   username: blogv3
   password: <%= ENV['BLOGV3_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
 
 
 
