--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^17.0.2",
     "react-carousel-dots": "^0.1.0",
     "react-dom": "^17.0.2",
+    "react-font-loader": "^2.0.0",
     "react-google-login": "^5.2.2",
     "react-google-places-autocomplete": "^3.4.0",
     "react-google-recaptcha": "^2.1.0",
