--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -15,6 +15,8 @@ default: &default
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
 
+  extract_css: true
+
 development:
   <<: *default
   # This is false since we're running `bin/webpacker -w` in Procfile.dev-setic
