--- a/package.json
+++ b/package.json
@@ -5,58 +5,15 @@
     "@babel/core": "7",
     "@babel/plugin-transform-runtime": "7",
     "@babel/preset-env": "7",
-    "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "7",
-    "@paypal/react-paypal-js": "^7.8.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@rails/activestorage": "^7.0.4",
-    "@rails/ujs": "^7.0.4",
-    "@tiptap/react": "^2.0.0-beta.193",
-    "@tiptap/starter-kit": "^2.0.0-beta.193",
-    "axios": "^1.2.1",
     "babel-loader": "8",
-    "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-styled-components": "^2.0.7",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "9",
-    "css-loader": "^6.7.3",
-    "css-minimizer-webpack-plugin": "^4.2.2",
-    "gsap": "^3.11.4",
-    "javascript-time-ago": "^2.5.9",
-    "jquery": "^3.6.3",
-    "mini-css-extract-plugin": "^2.7.2",
-    "pnp-webpack-plugin": "1",
-    "prop-types": "^15.8.1",
-    "prosemirror-commands": "^1.5.0",
-    "prosemirror-dropcursor": "^1.5.0",
-    "prosemirror-history": "^1.3.0",
-    "prosemirror-keymap": "^1.2.0",
-    "prosemirror-schema-list": "^1.2.2",
-    "react": "^17.0.2",
-    "react-carousel-dots": "^0.1.0",
-    "react-dom": "^17.0.2",
-    "react-font-loader": "^2.0.0",
-    "react-google-login": "^5.2.2",
-    "react-google-places-autocomplete": "^3.4.0",
-    "react-google-recaptcha": "^2.1.0",
-    "react-intersection-observer": "^9.4.1",
-    "react-on-rails": "13.0.2",
-    "react-refresh": "^0.14.0",
-    "react-router-dom": "^6.6.1",
-    "react-share": "^4.4.1",
-    "react-slugify": "^2.1.0",
-    "react-swipeable": "^7.0.0",
-    "react-time-ago": "^7.2.1",
-    "shakapacker": "6.5.2",
-    "style-loader": "^3.3.1",
-    "styled-components": "^5.3.6",
+    "shakapacker": "7.0.0",
     "terser-webpack-plugin": "5",
-    "tiptap": "^1.32.2",
+    "webpack": "5",
     "webpack-assets-manifest": "5",
     "webpack-cli": "4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "5",
-    "webpack-sources": "^3.2.3"
+    "webpack-merge": "5"
   },
   "version": "0.1.0",
   "babel": {
@@ -68,8 +25,6 @@
     "defaults"
   ],
   "devDependencies": {
-    "sass": "^1.70.0",
-    "sass-loader": "^14.0.0",
-    "webpack": "^5.89.0"
+    "webpack-dev-server": "4"
   }
 }
