--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -15,7 +15,7 @@ default: &default
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
 
-  extract_css: true
+  #extract_css: true
 
 development:
   <<: *default
@@ -59,7 +59,7 @@ production:
 
   # Production depends on precompilation of packs prior to booting for performance.
   compile: false
-  extract_css: true
+  #extract_css: true
 
   # Cache manifest.json for performance
   cache_manifest: true
