--- a/config/shakapacker.yml
+++ b/config/shakapacker.yml
@@ -109,10 +109,10 @@ production:
   <<: *default
 
   # Production depends on precompilation of packs prior to booting for performance.
-  compile: false
+  compile: true
 
   # Use content hash for naming assets. Cannot be overridden by for production.
-  useContentHash: true
+  useContentHash: false
 
   # Cache manifest.json for performance
   cache_manifest: true
