--- a/config/shakapacker.yml
+++ b/config/shakapacker.yml
@@ -31,7 +31,7 @@ default: &default
 
   # Additional paths webpack should look up modules
   # ['app/assets', 'engine/foo/app/assets']
-  additional_paths: []
+  additional_paths: [app/assets]
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
@@ -40,7 +40,7 @@ default: &default
   webpack_loader: 'babel'
 
   # Set to true to enable check for matching versions of shakapacker gem and NPM package - will raise an error if there is a mismatch or wildcard versioning is used
-  ensure_consistent_versioning: false
+  ensure_consistent_versioning: true
 
   # Select whether the compiler will use SHA digest ('digest' option) or most most recent modified timestamp ('mtime') to determine freshness
   compiler_strategy: digest
@@ -115,4 +115,4 @@ production:
   useContentHash: false
 
   # Cache manifest.json for performance
-  cache_manifest: true
+  cache_manifest: false
