--- a/package.json
+++ b/package.json
@@ -5,51 +5,13 @@
     "@babel/core": "7",
     "@babel/plugin-transform-runtime": "7",
     "@babel/preset-env": "7",
-    "@babel/preset-react": "^7.23.3",
     "@babel/runtime": "7",
-    "@paypal/react-paypal-js": "^8.1.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-    "@rails/activestorage": "^7.1.3",
-    "@rails/ujs": "^7.1.3",
-    "@tiptap/core": "^2.1.16",
-    "@tiptap/pm": "^2.1.16",
-    "@tiptap/react": "^2.1.16",
-    "@tiptap/starter-kit": "^2.1.16",
     "@types/babel__core": "7",
     "@types/webpack": "5",
-    "axios": "^1.6.5",
     "babel-loader": "8",
-    "babel-plugin-styled-components": "^2.1.4",
     "compression-webpack-plugin": "9",
-    "css-loader": "^6.9.1",
-    "css-minimizer-webpack-plugin": "^6.0.0",
-    "fork-ts-checker-webpack-plugin": "^9.0.2",
-    "gsap": "^3.12.5",
-    "javascript-time-ago": "^2.5.9",
-    "jquery": "^3.7.1",
-    "js-yaml": "^4.1.0",
-    "mini-css-extract-plugin": "^2.7.7",
-    "n": "^9.2.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-google-places-autocomplete": "^4.0.1",
-    "react-google-recaptcha": "^3.1.0",
-    "react-intersection-observer": "^9.5.3",
-    "react-on-rails": "^13.4.0",
-    "react-refresh": "^0.14.0",
-    "react-router-dom": "^6.21.3",
-    "react-share": "^5.0.3",
-    "react-slugify": "^3.0.3",
-    "react-swipeable": "^7.0.1",
-    "react-time-ago": "^7.2.1",
-    "sass": "^1.70.0",
-    "sass-loader": "^14.0.0",
     "shakapacker": "7.2.2",
-    "style-loader": "^3.3.4",
-    "styled-components": "^6.1.8",
     "terser-webpack-plugin": "5",
-    "typescript": "^5.3.3",
     "webpack": "5",
     "webpack-assets-manifest": "5",
     "webpack-cli": "4",
@@ -58,8 +20,7 @@
   "version": "0.1.0",
   "babel": {
     "presets": [
-      "./node_modules/shakapacker/package/babel/preset.js",
-      "@babel/preset-react"
+      "./node_modules/shakapacker/package/babel/preset.js"
     ]
   },
   "browserslist": [
