--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@rails/activestorage": "^7.1.3",
     "@rails/ujs": "^7.1.3",
+    "@rails/webpacker": "^5.4.4",
     "@tiptap/core": "^2.1.16",
     "@tiptap/pm": "^2.1.16",
     "@tiptap/react": "^2.1.16",
@@ -20,6 +21,7 @@
     "axios": "^1.6.5",
     "babel-loader": "8",
     "babel-plugin-styled-components": "^2.1.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "9",
     "css-loader": "^6.9.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
