--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+
+
 {
   "name": "app",
   "private": true,
@@ -11,17 +13,13 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@rails/activestorage": "^7.1.3",
     "@rails/ujs": "^7.1.3",
-    "@rails/webpacker": "^5.4.4",
     "@tiptap/core": "^2.1.16",
     "@tiptap/pm": "^2.1.16",
     "@tiptap/react": "^2.1.16",
     "@tiptap/starter-kit": "^2.1.16",
-    "@types/babel__core": "7",
-    "@types/webpack": "5",
     "axios": "^1.6.5",
     "babel-loader": "8",
     "babel-plugin-styled-components": "^2.1.4",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "9",
     "css-loader": "^6.9.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
@@ -31,7 +29,6 @@
     "jquery": "^3.7.1",
     "js-yaml": "^4.1.0",
     "mini-css-extract-plugin": "^2.7.7",
-    "n": "^9.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -52,7 +49,7 @@
     "styled-components": "^6.1.8",
     "terser-webpack-plugin": "5",
     "typescript": "^5.3.3",
-    "webpack": "5.89.0",
+    "webpack": "5",
     "webpack-assets-manifest": "5",
     "webpack-cli": "4",
     "webpack-merge": "5"
@@ -60,8 +57,7 @@
   "version": "0.1.0",
   "babel": {
     "presets": [
-      "./node_modules/shakapacker/package/babel/preset.js",
-      "@babel/preset-react"
+      "./node_modules/shakapacker/package/babel/preset.js"
     ]
   },
   "browserslist": [
