--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "app",
   "private": true,
@@ -17,6 +15,8 @@
     "@tiptap/pm": "^2.1.16",
     "@tiptap/react": "^2.1.16",
     "@tiptap/starter-kit": "^2.1.16",
+    "@types/babel__core": "7",
+    "@types/webpack": "5",
     "axios": "^1.6.5",
     "babel-loader": "8",
     "babel-plugin-styled-components": "^2.1.4",
