--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.5",
     "babel-loader": "8",
     "babel-plugin-styled-components": "^2.1.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "9",
     "css-loader": "^6.9.1",
     "css-minimizer-webpack-plugin": "^6.0.0",
@@ -46,7 +47,7 @@
     "sass-loader": "^14.0.0",
     "shakapacker": "7.2.2",
     "style-loader": "^3.3.4",
-    "styled-components": "^6.1.8",
+    "styled-components": "^5.3.11",
     "terser-webpack-plugin": "5",
     "typescript": "^5.3.3",
     "webpack": "5",
