--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "javascript-time-ago": "^2.5.9",
     "jquery": "^3.7.1",
     "js-yaml": "^4.1.0",
+    "memfs": "3.6.0",
     "mini-css-extract-plugin": "^2.7.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -36,6 +37,7 @@
     "react-google-places-autocomplete": "^4.0.1",
     "react-google-recaptcha": "^3.1.0",
     "react-intersection-observer": "^9.5.3",
+    "react-is": "^18.2.0",
     "react-on-rails": "^13.4.0",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.21.3",
