--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "styled-components": "^5.3.11",
     "terser-webpack-plugin": "5",
     "typescript": "^5.3.3",
+    "vips": "^1.0.0",
     "webpack": "5",
     "webpack-assets-manifest": "5",
     "webpack-cli": "4",
