--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/webpack": "5",
     "axios": "^1.6.5",
     "babel-loader": "8",
-    "babel-plugin-styled-components": "^2.1.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "compression-webpack-plugin": "9",
     "css-loader": "^6.9.1",
@@ -29,7 +28,7 @@
     "javascript-time-ago": "^2.5.9",
     "jquery": "^3.7.1",
     "js-yaml": "^4.1.0",
-    "memfs": "3.6.0",
+    "memfs": "^4.7.7",
     "mini-css-extract-plugin": "^2.7.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -68,6 +67,7 @@
     "defaults"
   ],
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
     "webpack-dev-server": "4"
   }
 }
