--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.5.3",
     "react-is": "^18.2.0",
     "react-on-rails": "^13.4.0",
