--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@rails/activestorage": "^7.1.3",
     "@rails/ujs": "^7.1.3",
+    "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query-devtools": "^5.62.7",
     "@types/babel__core": "7",
     "@types/webpack": "5",
     "axios": "^1.6.5",
